# AI_Interview_Prep_Project

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  Start_PrepForge.bat  Stop_PrepForge.bat  docker-compose.yml  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_identity.py  0002_resume_ats.py  0003_interview_voice.py  0004_coding.py  0005_evaluation.py  0006_agents.py  0007_analytics.py  0008_organizations.py
backend/app/: __init__.py  bootstrap.py  main.py
backend/app/ai/: grading.py  interview_engine.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  observability.py  redis.py  security.py
backend/app/models/: __init__.py  agent.py  analytics.py  coding.py  evaluation.py  interview.py  organization.py  resume.py  user.py
backend/app/repositories/: agent.py  analytics.py  base.py  coding.py  evaluation.py  interview.py  organization.py  resume.py  session.py  user.py
backend/app/schemas/: agent.py  analytics.py  auth.py  coding.py  evaluation.py  interview.py  organization.py  resume.py  user.py
backend/app/services/: agent_service.py  analytics_service.py  auth_service.py  coding_service.py  evaluation_service.py  interview_service.py  organization_service.py  quota_service.py  resume_service.py  storage.py  voice_service.py
backend/tests/: conftest.py  test_agents.py  test_agents_api.py  test_aggregations.py  test_analytics_api.py  test_analyzer.py  test_auth.py  test_cache.py  test_coding.py  test_complexity.py  test_evaluation_api.py  test_grading.py  test_interview.py  test_interview_engine.py  test_metrics.py  test_observability_api.py  test_organizations.py  test_quota.py  test_resume.py  test_voice.py
docs/: ROADMAP.md  (+5 more)
(+115 files in other folders)
